searchBar component styling complete

--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,7 @@
   --cursive: cursive;
   --purple: #a445ed;
   --sub-text: #757575;
+  --search-box: #f4f4f4;
   /* font sizes */
   --headingL: 4rem;
   --headingM: 24px;
